Updated hive.md notes